--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+:root {
+    /* //css variables */
+    --color-primary: #6ca452;
+    --color-success: #00bf8e;
+    --color-warning: #f7c94b;
+    --color-danger:#1d1615;
+    --color-danger-variant: rgba(247, 88, 66, 0.4);
+    --color-white: #fff;
+    --color-light: rgba(255, 255, 255, 0.7);
+    --color-black: #000;
+    --color-bg: #d1d0f5;
+    --color-bg1: #2e3267;
+    --color-bg2:#6d9da9;
+
+    /* css variables */
+    --container-width-lg: 80%;
+    --container-width-md: 90%;
+    --container-width-sm: 94%;
+
+    --transition: all 400ms ease;
+}
+
+
 /* css dharamendra */
 
 .faqs{
