--- a/style.css
+++ b/style.css
@@ -109,6 +109,68 @@ img {
 }
 
 
+/* navbar section css */
+nav {
+    background: transparent;
+    width: 100vw;
+    height: 5rem;
+    position: fixed;
+    top: 0;
+    z-index: 11;
+    /*so that it always remain on the top */
+}
+
+/* change the navbar using js */
+.window-scroll{
+    background: var(--color-primary);
+    box-shadow:0 1rem 2rem rgba(0,0,0,0.2);
+}
+.nav__container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav button {
+    display: none;
+}
+
+.nav__menu {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+.nav__menu a {
+    font-size: 0.9rem;
+    transition: var(--transition);
+}
+
+.nav__menu a:hover {
+    color: var(--color-bg2);
+}
+
+/* starting of the header section */
+header {
+    position: relative;
+    top: 5rem;
+    overflow: hidden;
+    height: 70vh;
+    margin-bottom: 5rem; 
+}
+
+.header__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 5rem;
+    height: 100%;
+}
+.header__left p{
+    margin:1rem 0 2.4rem;
+}
+
 /* css dharamendra */
 
 .faqs{
