--- a/style.css
+++ b/style.css
@@ -171,6 +171,73 @@ header {
     margin:1rem 0 2.4rem;
 }
 
+
+/* categories section */
+
+.categories {
+background: var(--color-bg1);
+height:32rem;
+}
+.categories h1 {
+line-height: 1;
+margin-bottom: 3em;
+}
+.categories__container {
+display: grid;
+grid-template-columns: 40% 60%;
+/* gap: 4rem; */
+}
+
+.categories__left{
+    margin-right: 4rem;
+}
+.categories__left p{
+ margin: 1rem 0 3rem; /*1rem for the top 0 for left and right 3rem for the bottom*/
+}
+.categories__right{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1.2rem;
+    }
+
+    .category{
+        background: var(--color-bg2);
+        padding: 2rem;
+        border-radius: 2rem;
+        transition: var(--transition);
+    }
+
+    .category:hover{ 
+        box-shadow: 0 3rem 3rem rgba(0,0,0,0.3);
+        z-index:1;
+    }
+
+    /* categories section colors settings */
+    .category:nth-child(2) .category__icon{
+       background: var(--color-danger);
+    }
+    .category:nth-child(3) .category__icon{
+        background: var(--color-success);
+     }
+     .category:nth-child(4) .category__icon{
+        background: var(--color-warning);
+     }
+     .category:nth-child(5) .category__icon{
+        background: var(--color-success);
+     }
+    .category__icon{
+        background:var(--color-primary);
+        padding:0.7rem;
+        border-radius:0.9rem;
+    }
+    .category h5{
+        margin:2rem 0 1rem;
+    }
+
+    .category p{
+        font-size: 0.85rem;
+    }
+
 /* css dharamendra */
 
 .faqs{
