--- a/style.css
+++ b/style.css
@@ -238,6 +238,39 @@ grid-template-columns: 40% 60%;
         font-size: 0.85rem;
     }
 
+
+
+ /* style for the popular courses  */
+.courses{
+    margin-top:10rem;
+
+}
+.courses__container{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+}     
+
+.course{
+    background:var(--color-bg1);
+    text-align: center;
+    border:1px solid transparent;
+    transition: var(--transition);
+}
+
+.course:hover{
+    background: transparent;
+    border-color: var(--color-primary);
+}
+
+.course__info{
+    padding:2rem;
+}
+
+.course__info p{
+    margin:1.2rem 0 2rem;
+    font-size:0.9rem;
+}
+
 /* css dharamendra */
 
 .faqs{
