--- a/about.css
+++ b/about.css
@@ -1,3 +1,4 @@
+
 /* ======================== ACHIEVEMENTS ====================== */
 .about__achievements {
     margin-top: 0;
@@ -44,6 +45,7 @@
 .achievement__card p {
     margin-top: 1rem;
 }
+
 
 /* ========================== TEAM ======================= */
 .team {
@@ -97,4 +99,27 @@
 }
 .team__member-socials a {
     padding: 1rem;
+}
+
+
+/*=================== MEDIA QUERIES (TABLETS) =====================*/
+@media screen and (max-width: 1024px) {
+    .about__achievements {
+        margin-top: 2rem;
+    }
+    .about__achievements-container {
+        grid-template-columns: 1fr;
+        gap: 4rem;
+    }
+    .about__achievements-left {
+        width: 80%;
+        margin: 0 auto;
+    }
+    .team__container {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+    }
+    .team__member {
+        padding: 1rem;
+    }
 }
