--- a/contact.css
+++ b/contact.css
@@ -8,3 +8,46 @@
     margin: 7rem auto;
     border-radius: 1rem;
 }
+
+
+/*======================= ASIDE ===================== */
+.contact__aside {
+    background: var(--color-primary);
+    padding: 3rem;
+    border-radius: 1rem;
+    position: relative;
+    bottom: 10rem;
+}
+.aside__image {
+    width: 12rem;
+    margin-bottom: 2rem;
+}
+.contact__aside h2 {
+    text-align: left;
+    margin-bottom: 1rem;
+}
+.contact__aside p {
+    font-size: 0.9rem;
+    margin-bottom: 2rem;
+}
+.contact__details li {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.contact__socials {
+    display: flex;
+    gap: 0.8rem;
+    margin-top: 3rem;
+}
+.contact__socials a {
+    background-color: var(--color-bg2);
+    padding: 0.5rem;
+    border-radius: 50%;
+    font-size: 0.9rem;
+    transition: var(--transition);
+}
+.contact_socials a:hover {
+    background: transparent;
+}
