--- a/contact.css
+++ b/contact.css
@@ -101,3 +101,23 @@ input, textarea {
         margin-right: 1.5rem;
     }
 }
+
+
+/* ================== MEDIA QUERIES (MOBILE PHONES) ================ */
+@media screen and (max-width: 600px) {
+    .contact__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        margin-top: 0;
+        padding: 0;
+    }
+    .contact__form {
+        margin: 0 1.5rem 3rem;
+    }
+    .form__name {
+        flex-direction: column;
+    }
+    .form__name input[type="text"] {
+        width: 100%;
+    }
+}
