--- a/style.css
+++ b/style.css
@@ -428,7 +428,120 @@ grid-template-columns: 40% 60%;
           font-size: 1.2rem;
         }
       }
+/*============NAVBAR============*/
+nav button{
+    display: inline-block;
+    background: transparent;
+    font-size: 1.8rem;
+    color: var(--color-white);
+    cursor: pointer;
+}
 
+nav button#close-menu-btn{
+    display: none;
+}
+
+.nav__menu{
+    position: fixed;
+    top: 5rem;
+    right: 5%
+    height: fit-content;
+    width: 18rem;
+    flex-direction: column;
+    gap: 0;
+    display: none;
+}
+
+.nav__menu li{
+    width: 100%;
+    height: 5.8rem;
+    animation: animateNavItems 400ms linear forwards;
+    transform-origin: top right;
+    opacity: 0;
+}
+
+.nav__menu li:nth-child(2){
+    animation-delay: 200ms;
+}
+
+.nav__menu li:nth-child(3){
+    animation-delay: 400ms;
+}
+
+.nav__menu li:nth-child(4){
+    animation-delay: 600ms;
+}
+
+@keyframes animateNavItems{
+    0%{
+        transform: rotateZ(-90deg) rotateX(90 deg) scale(0.1);
+    }
+    100%{
+        transform: rotateZ(0) rotateX(0) scale(1);
+        opacity: 1;
+    }
+}
+
+.nav__menu li a{
+    background: var(--color-primary);
+    box-shadow: -4rem 6rem 10rem rgba(0,0,0,0.6);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.nav__menu li a:hover{
+    background: var(--color-bg2);
+    color: var(--color-white);
+}
+
+/* ========================== HEADER ==========================*/
+
+header{
+    height: 52vh;
+    margin-bottom: 4rem;
+}
+
+.head__container{
+    gap: 0;
+    padding-bottom: 3rem;
+}
+/*========================== CATEGORIES ========================== */
+.categories{
+    height: auto;
+}
+
+.catogories__container{
+    grid-template-columns: lfr;
+    gap: 3rem;
+}
+
+.categories__left{
+    margin-right: 0;
+}
+/* ========================== POPULAR COURSES ========================== */
+.courses{
+    margin-top: 0;
+}
+.courses__container{
+    grid-template-columns: lfr lfr;
+}
+
+/*========================== FAQs ==========================*/
+
+.faqs__container{
+    grid-template-columns: lfr;
+}
+
+.faq{
+    padding: 1.5rem;
+}
+
+/*========================== FOOTER ==========================*/
+.footer__container{
+    grid-template-columns: lfr lfr;
+}
 
 
 
