--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@
 
 :root {
     /* //css variables */
-    --color-primary: #6ca452;
+    --color-primary: #bfddb1;
     --color-success: #00bf8e;
     --color-warning: #f7c94b;
     --color-danger:#1d1615;
     --color-danger-variant: rgba(247, 88, 66, 0.4);
-    --color-white: #fff;
-    --color-light: rgba(255, 255, 255, 0.7);
+    --color-white: #5f2c2c;
+    --color-light: rgba(148, 132, 132, 0.7);
     --color-black: #000;
     --color-bg: #d1d0f5;
-    --color-bg1: #2e3267;
+    --color-bg1: #9195bd;
     --color-bg2:#6d9da9;
 
     /* css variables */
@@ -34,7 +34,7 @@ body {
     font-family: "Montserrat", "sans-serif";
     line-height: 1.7;
     color: var(--color-white);
-    background: var(--color-success);
+    background: var(--color-bg);
 }
 
 .container {
@@ -80,7 +80,6 @@ a {
     color: var(--color-white);
 }
 
-
 img {
     width: 100%;
     display: block;
@@ -107,7 +106,6 @@ img {
     background: var(--color-danger);
     color: var(--color-white);
 }
-
 
 /* navbar section css */
 nav {
@@ -171,7 +169,6 @@ header {
     margin:1rem 0 2.4rem;
 }
 
-
 /* categories section */
 
 .categories {
@@ -180,7 +177,7 @@ height:32rem;
 }
 .categories h1 {
 line-height: 1;
-margin-bottom: 3rem;
+margin-bottom: 3em;
 }
 .categories__container {
 display: grid;
@@ -238,9 +235,7 @@ grid-template-columns: 40% 60%;
         font-size: 0.85rem;
     }
 
-
-
- /* style for the popular courses  */
+    /* style for the popular courses  */
 .courses{
     margin-top:10rem;
 
@@ -271,8 +266,8 @@ grid-template-columns: 40% 60%;
     font-size:0.9rem;
 }
 
-/* css dharamendra */
 
+/* faqs by dsingh*/
 .faqs{
     background:var(--color-bg1);
     box-shadow: inset 0 0 3rem rgba(0,0,0,0.5);
@@ -428,29 +423,30 @@ grid-template-columns: 40% 60%;
           font-size: 1.2rem;
         }
       }
-/*============NAVBAR============*/
-nav button{
-    display: inline-block;
-    background: transparent;
-    font-size: 1.8rem;
-    color: var(--color-white);
-    cursor: pointer;
-}
+      
+      /*============NAVBAR============*/
+      nav button{
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+    }
 
-nav button#close-menu-btn{
-    display: none;
-}
+      nav button#close-menu-btn{
+        display: none;
+    }
 
-.nav__menu{
-    position: fixed;
-    top: 5rem;
-    right: 5%
-    height: fit-content;
-    width: 18rem;
-    flex-direction: column;
-    gap: 0;
-    display: none;
-}
+     .nav__menu{
+       position: fixed;
+       top: 5rem;
+       right: 5%;
+       height: fit-content;
+       width: 18rem;
+       flex-direction: column;
+       gap:0;
+       display: none;
+    }
 
 .nav__menu li{
     width: 100%;
@@ -494,7 +490,7 @@ nav button#close-menu-btn{
 .nav__menu li a:hover{
     background: var(--color-bg2);
     color: var(--color-white);
-}
+ }
 
 /* ========================== HEADER ==========================*/
 
@@ -541,8 +537,6 @@ header{
 /*========================== FOOTER ==========================*/
 .footer__container{
     grid-template-columns: lfr lfr;
-}
+ }
 
 
-
-      
